# ai-integrator

./: .env.example  AGENTS.md  CONTRIBUTING.md  DOCS_STANDARD.md  GITHUB_SETUP.md  README.md  STATUS_MIGRACAO.md  initial-prompt  main.py  pyproject.toml  requirements.txt
.specs/: README.md
.specs/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.specs/project/: PROJECT.md  ROADMAP.md  STATE.md
app/: __init__.py
app/api/: __init__.py  dependencies.py
app/api/routes/: __init__.py  items.py  rd_conversas.py
app/clients/: __init__.py  api_client.py  rd_conversas_client.py
app/core/: __init__.py  auth.py  config.py  constants.py  crypto.py  exceptions.py  metrics.py
app/models/: __init__.py  rd_conversas_schemas.py  schemas.py
app/services/: __init__.py  item_service.py  rd_conversas_service.py
docs/: api.md  architecture.md  index.md  installation.md  sidebar.json
references/: rd-station-conversas-api.md  style-guide.md
scripts/: configure-github-credentials.ps1
secrets/: rd_conversas_private.jwk.json
tests/: conftest.py  test_auth.py  test_client.py  test_crypto.py  test_endpoints.py  test_item_service.py  test_rd_conversas_client.py  test_rd_conversas_endpoints.py
tests/integration/: test_real_api.py
